Changed: Added new tab for diagnostics, which checks for hardware, public ISP, gateway router, DNS and global latency